syntax = "proto3";

package autoxtime.proto;

message Season {
  optional int64 season_id = 1;
  optional string name = 2;
  optional int64 organization_id = 4;
}
